<!--
   * Copyright (c) Rhys Evans
   * All Rights Reserved -->

<resources>
    <string name="app_name">Tax-E</string>
    <string name="welcome_text">Welcome to Tax-E</string>
    <string name="welcome_sub_text">Login To Continue</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="no_account_text">Don\'t have an account?</string>
    <string name="already_have_account_text">Already have an account?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_full">Create an Account</string>
    <string name="name_input_hint">Full Name</string>
    <string name="confirm_password_input_hint">Confirm Password</string>
    <string name="register_button_text">Register</string>
    <string name="logout_confirmation">Are you sure you wish to log out?</string>
    <string name="create_new_booking">New Booking</string>
    <string name="create_new_booking_submit">Create</string>
    <string name="pickup_location_input_hint">Pickup Location</string>
    <string name="destination_input_hint">Where are you going to?</string>
    <string name="time_input_hint">Desired Time</string>
    <string name="number_of_passengers_input_hint">Number of Passengers</string>
    <string name="notes_input_hint">Additional Notes (optional)</string>
    <string name="cancel_booking_creation_confirmation">Are you sure you wish to abandon this booking?</string>
    <string name="select_number">Choose a Number</string>
    <string name="number_of_passengers_selection">Select Number of Passengers</string>
    <string name="desired_time_selection">Select Desired Time</string>
    <string name="current_password_input_hint">Current Password</string>
    <string name="new_name_input_hint">New Full Name</string>
    <string name="new_password_input_hint">New Password</string>
    <string name="confirm_new_password_input_hint">Confirm New Password</string>
    <string name="author">Author: Rhys Evans</string>
    <string name="learn_more">Learn More</string>
    <string name="version_name">Version: %1$s</string>
    <string name="name_successfully_changed">Name Successfully Changed</string>
    <string name="password_successfully_changed">Password Successfully Changed</string>
    <string name="logged_out_successfully">Logged Out</string>
    <string name="booking_created_successfully">Booking Successfully Created</string>
    <string name="pickupLocation">Pickup Location</string>
    <string name="destination">Destination</string>
    <string name="due_at">Due At</string>
    <string name="driver">Driver</string>
    <string name="status">Status</string>
    <string name="noPassengers">No. Passengers</string>
    <string name="cancel">Cancel</string>
    <string name="no_active_booking">No Bookings Found</string>
    <string name="get_started">Click the + below to get started</string>
    <string name="cancel_booking_confirmation">Are you sure you wish to cancel this booking?</string>
    <string name="view_account">My Account</string>
    <string name="bookings_made">Bookings</string>
    <string name="active">Active</string>
    <string name="member_since">Member Since</string>
    <string name="last_booking">Last Booking</string>
    <string name="not_applicable">N/A</string>
    <string name="view_notes">Notes</string>
    <string name="booking_notes">Booking Notes</string>
    <string name="new_note">Add Note to Booking</string>
    <string name="note_successfully_added">Note added to booking</string>
    <string name="resign_confirmation">Are you sure you wish to resign from your current company?</string>
    <string name="resigned_successfully">Resigned Successfully, please log in again.</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="release">Release</string>
    <string name="customer">Customer</string>
    <string name="release_booking_confirmation">Are you sure you wish to release this booking?</string>
    <string name="booking_status_selection">Select Booking Status</string>

    <!-- Time Formats -->
    <string name="desired_time_format">%1$02d:%2$02d</string>
    <string name="short_time_display_format">%1$tH:%1$tM</string>
    <string name="time_display_format">%1$tH:%1$tM | %1$td/%1$tm/%1$tY</string>
    <string name="date_display_format">%1$td %1$tb</string>
    <string name="member_since_display_format">%1$td/%1$tm/%1$tY</string>

    <!-- Nav Options -->
    <string name="nav_home">Home</string>
    <string name="nav_booking">Booking</string>
    <string name="nav_active_bookings">Active Bookings</string>
    <string name="nav_new_booking">New</string>
    <string name="nav_history">History</string>
    <string name="nav_account">Account</string>

    <!-- Account Action Options -->
    <string name="account_action_change_password">Change Password</string>
    <string name="account_action_change_name">Change Full Name</string>
    <string name="account_action_log_out">Log Out</string>
    <string name="account_action_about">About</string>
    <string name="account_action_resign">Resign</string>

    <string name="account_option_icon_content_description">Icon for account action</string>

    <!-- Success Strings -->
    <string name="register_success">Successfully Registered</string>
    <string name="create_booking_success">Booking Created Successfully</string>
    <string name="booking_cancelled">Booking Successfully Cancelled</string>
    <string name="booking_released">Booking Successfully Released</string>
    <string name="booking_status_updated">Booking Status Successfully Updated</string>

    <!-- Validation Errors -->
    <string name="name_error">Full Name must be at least 3 characters long, and not contain any numbers.</string>
    <string name="email_error">Please enter a valid email</string>
    <string name="password_error">Password must contain at least 1 number and must be at least 8 characters long.</string>
    <string name="password_confirmation_error">Passwords do not Match</string>
    <string name="empty_password_error">Please enter password.</string>
    <string name="no_passengers_error">There must be at least one passenger to create a booking</string>
    <string name="pickup_location_error">Please provide a pickup location</string>
    <string name="destination_error">Please provide a destination</string>
    <string name="booking_time_error">Booking times cannot be in the past, further than 3 hours away, or sooner than  10 minutes away.</string>

    <!-- Errors -->
    <string name="invalid_token_error">Invalid token provided, try logging in again.</string>
    <string name="token_expired_error">Access token has expired, please log in again.</string>
    <string name="missing_token_error">Access token not found, try logging in again.</string>
    <string name="no_users_found_error">No users could be found.</string>
    <string name="user_already_exists_error">User with that email already exists.</string>
    <string name="authentication_failed_error">Invalid Email or Password, try again.</string>
    <string name="validation_error">One or more fields were invalid.</string>
    <string name="invalid_object_id_error">Invalid ID provided.</string>
    <string name="unauthorized_edit_error">You are not authorized to make that edit.</string>
    <string name="booking_not_found_error">Booking could not be found</string>
    <string name="customer_already_has_active_booking_error">You already have an active booking, please cancel it and try again.</string>
    <string name="unauthorized_view_error">You are not authorized to view this record</string>
    <string name="invalid_role_error">The user provided does not have the needed permissions for this task</string>
    <string name="missing_authentication_error">Missing or incomplete authentication credentials provided</string>
    <string name="company_not_found_error">Company could not be found</string>
    <string name="driver_already_added_error">That driver is already employed by a company</string>

    <string name="internal_server_error">Something Went Wrong :/</string>
    <string name="network_error">Network Error</string>
    <string name="token_expiry">Token Expired</string>
    <string name="booking_not_created">Booking not Created</string>
    <string name="network_error_long">A network error has occurred. Please make sure you are connected to the internet</string>
    <string name="incorrect_password_error">The password you entered is incorrect, try again.</string>
    <string name="company_admin_login">Cannot log in as Company Admin, use the web admin panel instead.</string>

    <!-- Booking Status Array -->
    <string-array name="booking_status_array">
        <item>In_Progress</item>
        <item>Arrived</item>
        <item>Finished</item>
    </string-array>
</resources>
