<?xml version="1.0" encoding="utf-8"?>
<!--
   * Copyright (c) Rhys Evans
   * All Rights Reserved -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home"/>

    <item
        android:id="@+id/nav_booking"
        android:icon="@drawable/ic_directions_car_black_24dp"
        android:title="@string/nav_booking"/>

    <item
        android:id="@+id/nav_new"
        android:icon="@drawable/ic_add_box_black_24dp"
        android:title="@string/nav_new_booking"/>

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/nav_history"/>

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/nav_account"/>
</menu>