<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AboutActivity">

    <!-- Toolbar -->
    <include layout="@layout/two_button_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/about_margin"
        android:layout_margin="@dimen/form_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- App Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_header_5"/>

        <!-- App Version -->
        <TextView
            android:id="@+id/app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/header_2_margin"
            android:textAlignment="center" />

        <!-- Placeholder Logo -->
        <View
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/header_1_margin"
            android:background="@color/colorPrimary"/>

        <!-- Author -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/header_1_margin"
            android:textAlignment="center"
            android:text="@string/author"/>

        <!-- Find Out More -->
        <Button
            android:id="@+id/learn_more_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_margin"
            android:padding="10dp"
            android:text="@string/learn_more"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>