<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.authentication.RegisterFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Intro block -->
        <LinearLayout
            android:id="@+id/intro_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/register_form">

            <!-- Registration Title -->
            <TextView
                android:id="@+id/registration_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_full"
                android:textSize="@dimen/text_size_header_6"/>
        </LinearLayout>

        <!-- Register Form -->
        <LinearLayout
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="@dimen/form_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_container">

            <!-- Name Field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin_register">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_person_black_24dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:drawablePadding="2dip"
                    android:paddingEnd="12dp"
                    android:paddingStart="2dp"
                    android:hint="@string/name_input_hint"
                    android:inputType="textCapWords"/>
            </android.support.design.widget.TextInputLayout>


            <!-- Email Field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_input_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_email_black_24dp"
                    android:drawableTint="@android:color/darker_gray"
                    android:drawablePadding="2dip"
                    android:paddingEnd="12dp"
                    android:paddingStart="2dp"
                    android:hint="@string/email_input_hint"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password Field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_input_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_input_hint"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="2dip"
                    android:paddingEnd="12dp"
                    android:paddingStart="2dp"
                    android:drawableTint="@android:color/darker_gray"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Confirm Password Field -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_password_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_input_margin">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirm_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password_input_hint"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="2dip"
                    android:paddingEnd="12dp"
                    android:paddingStart="2dp"
                    android:drawableTint="@android:color/darker_gray"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Submit Button -->
            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_margin"
                android:background="@drawable/button_disabled_bg"
                android:text="@string/register_button_text"/>
        </LinearLayout>

        <!-- Progress Indicator -->
        <LinearLayout
            android:id="@+id/progress_indicator_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="@dimen/form_margin"
            app:layout_constraintTop_toBottomOf="@id/register_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ProgressBar
                android:id="@+id/progress_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxHeight="20dp"
                android:indeterminate="true"
                android:visibility="gone"
                style="?android:attr/progressBarStyleHorizontal"/>
        </LinearLayout>

        <!-- Login Text -->
        <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/register_text_margin"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/progress_indicator_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/already_have_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account_text"/>

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/register_text_padding"
                android:layout_marginEnd="@dimen/register_text_padding"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>