<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.ChangePasswordActivity">

    <!--Toolbar -->
    <include layout="@layout/two_button_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Change Password Form -->
    <ScrollView
        android:id="@+id/change_password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/form_margin_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Current Password Container -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/current_password_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/form_margin_change_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/current_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/current_password_input_hint"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <!-- New Password Container -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_password_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/form_margin_change_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/new_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password_input_hint"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Confirm New Password Container -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_new_password_input_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/form_margin_change_password">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirm_new_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_new_password_input_hint"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"/>
        </LinearLayout>
    </ScrollView>

    <!-- Progress Indicator -->
    <include layout="@layout/progress_indicator_overlay"/>
</android.support.constraint.ConstraintLayout>